# django-bridger

./: .coveragerc  .flake8  .gitignore  .readthedocs.yml  .travis.yml  LICENSE  MANIFEST.in  Pipfile  Procfile  README.md  README.rst  Untitled.ipynb  celery_app.py  docker-compose.yml  mkdocs.yml  pyproject.toml  pytest.ini  run_dev.sh  setup.cfg  setup.py  tox.ini  travis.yml
.github/workflows/: cd.yml  ci.yml  pip.yml
bridger/: __init__.py  _buttons.py  _viewsets.py  admin.py  auth.py  buttons.py  config.py  display.py  enums.py  frontend.py  frontend_user_configuration.py  menus.py  messages.py  metadata.py  mixins.py  models.py  pagination.py  permissions.py  profile.py  routers.py  settings.py  tasks.py  urls.py  views.py  viewsets.py
bridger/buttons/: __init__.py  bases.py  buttons.py  enums.py  metadata.py  metadata_config.py  mixins.py
bridger/clubhouse/: __init__.py  display.py  endpoints.py  title.py
bridger/display/: __init__.py  formatting.py  instance_display.py  list_display.py  metadata_config.py
bridger/docs/: __init__.py
bridger/endpoints/: metadata_config.py
bridger/filters/: __init__.py  backends.py  defaults.py  fields.py  filterset.py  mixins.py
bridger/fsm/: buttons.py  markdown_extensions.py  mixins.py
bridger/history/: serializers.py  viewsets.py
bridger/mailing/: alternative.py
bridger/markdown/: admin.py  models.py  template.py  views.py
bridger/menus/: __init__.py  menus.py  registry.py  views.py
bridger/metadata/: __init__.py  metadata.py  mixins.py  views.py
bridger/metadata/configs/: __init__.py  documentation.py  fields.py  filter_fields.py  identifier.py  ordering_fields.py  pagination.py  pk.py  search_fields.py  type.py
bridger/metadata/fields/: __init__.py  buttons.py  create_buttons.py  custom_buttons.py  custom_instance_buttons.py  display.py  docs.py  endpoints.py  fields.py  filter_fields.py  identifier.py  ordering_fields.py  pagination.py  pk.py  preview.py  search_fields.py  titles.py  widget_type.py
bridger/migrations/: 0001_initial.py  0002_notification.py  0003_auto_20200218_1329.py  0004_auto_20200327_1152.py  0005_auto_20200402_1741.py  0006_auto_20200507_0913.py  0007_asset.py  0008_auto_20200514_1711.py  0009_auto_20200514_1713.py  0010_asset_content_type.py  0011_asset_file_url_name.py  0012_tag.py  0013_tag_slug.py
bridger/notifications/: admin.py  config.py  consumers.py  models.py  serializers.py  settings.py  tasks.py  viewsets.py
bridger/notifications/viewsets/: __init__.py  (+5 more)
bridger/pandas/: fields.py  filters.py  metadata.py  views.py
bridger/preview/: metadata_config.py
bridger/search/: __init__.py
bridger/serializers/: __init__.py  mixins.py  serializers.py
bridger/share/: __init__.py  buttons.py  notifications.py  serializers.py  views.py
bridger/signals/: instance_buttons.py
bridger/tags/: __init__.py  admin.py  filters.py  models.py  serializers.py  viewsets.py
bridger/tests/: mixins.py  signals.py  test_something.py  tests.py  utils.py
bridger/titles/: metadata_config.py
bridger/utils/: __init__.py  colors.py  date.py  enum.py  figures.py  html.py  icons.py  itertools.py  metadata_validator.py  models.py  options1.json  prettytable.py  print.py  random.py  serializers.py  settings.py  signals.py  stainly.py  strings.py  task.py  views.py
bridger/viewsets/: __init__.py  generics.py  mixins.py  viewsets.py
bridger/websockets/: auth.py  consumers.py  middleware.py
djangodocstrings/: __init__.py  extension.py
docs/: buttons.md  concept.md  display.md  docs.css  filters.md  getting_started.md  index.md  menu.md  metadata.md  references.md  requirements.txt  scripts.md  serializers.md  share.md  signals.md  site.py  viewsets.md  websockets.md  workflow.md
notebooks/: Untitled.ipynb  search.ipynb
scripts/: celery  dev-server  django_shell  docs  format  isort  new_tag  notebook  psql  pytest  pytest_full  startup
tests/: __init__.py  admin.py  asgi.py  factories.py  filters.py  models.py  routing.py  serializers.py  settings.py  urls.py  views.py  viewsets.py
tests/endpoint_documentation/: model_test.md
tests/migrations/: 0001_initial.py  0002_relatedmodeltest.py  0003_auto_20191220_0911.py  0004_modeltest_status_field.py  0005_auto_20200113_1053.py  0006_auto_20200113_1110.py  0007_modeltest_decimal_field.py  0008_modeltest_text_field.py  0009_auto_20200113_1239.py  0010_modeltest_datetime_field1.py  0011_auto_20200206_1607.py  0012_relatedmodeltest_model_tests.py  0013_auto_20200219_1324.py  0014_auto_20200327_1152.py  0015_historicalmodeltest.py  0016_historicalrelatedmodeltest.py  0017_auto_20200416_0927.py  0018_auto_20200416_1049.py  0019_auto_20200416_1050.py  0020_auto_20200417_1512.py  0021_auto_20200422_1410.py  0022_auto_20200507_0913.py  0023_auto_20200514_1705.py  0024_auto_20200609_1328.py  0025_auto_20200609_1352.py  0026_auto_20200609_1421.py  0027_auto_20200804_1115.py  0028_auto_20210528_1038.py
tests/sample requests/: test
tests/settings/: base.py  production.py  tests.py
tests/templatetags/: test_tags.py
tests/tests/: conftest.py  test_enums.py  test_metadata.py  test_mixin.py  test_pagination.py  test_serializers.py  test_something.py  test_text_fields.py  test_views.py  test_viewsets.py  test_websockets.py  utils.py
tests/viewsets/: __init__.py  calendar.py  chart.py  model_test.py  pandas.py  related_model_test.py
tests2/: __init__.py  apps.py  models.py  receivers.py
(+51 files in other folders)
