[metadata]
name = django_bridger
version = attr: bridger.__version__
author = Christopher Wittlinger @ Intellineers GmbH & Co.KG
author_email = c.wittlinger@intellineers.com
description = The bridge between a Django Backend and a Javascript based Frontend
long_description = file: README.md
license = BSD-3-Clause
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
zip_safe = True
include_package_data = True
packages = find:

python_requires = >=3.6.7
install_requires =
    django >= 2.2.8, < 3.0
    djangorestframework
    djangorestframework-simplejwt
    django-filter
    django-fsm

    channels
    celery[redis]
    billiard == 3.6.1.0
    django-celery-beat

    psycopg2-binary
    pillow
    numpy
    pandas
    jsonschema
    plotly

[isort]
line_length=99
multi_line_output=3